(ITGM#7) поправил верстку

--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -11,6 +11,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="IT Global Meetup. СПб, 02 апреля 2016 в Club House. Слет ИТ-сообществ Санкт-Петербурга.">
+
+        <meta property="og:title" content="IT Global Meetup #7" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png" />
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:description" content= "02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3."/>
+        <meta property="og:url" content="http://piter-united.ru/itgm7/itgm.html">
+
         <meta name="author" content="IT Global Meetup">
 
         <!-- CSS -->
@@ -148,7 +156,7 @@
         <script src="js/retina.js"></script>
 
         <script src="js/main.js"></script>
-        <script type="text/javascript" src="http://yastatic.net/share/share.js" charset="utf-8"></script>
+        <!--<script type="text/javascript" src="http://yastatic.net/share/share.js" charset="utf-8"></script>-->
 
         <!-- GOOGLE ANALYTICS -->
         <script src="/js/google-analytics.pageview.piter-united.ru.js"></script>
@@ -156,7 +164,10 @@
         <!-- Yandex.Metrika counter -->
         <script type="text/javascript" src="/js/yandex-metrika.piter-united.ru.js"></script>
         <noscript><div><img src="//mc.yandex.ru/watch/26968695" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+        <!--<noscript><div><img src="//piter-united.ru/itgm7/img/site_logo/itgm_logo2.png" style="position:absolute; left:-9999px;" alt="" /></div></noscript>-->
         <!-- Yandex.Metrika counter -->
 
+        <script src="https://yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
+        <script src="https://yastatic.net/share2/share.js" async="async"></script>
     </body>
 </html>
