--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -168,6 +168,6 @@
         <!-- Yandex.Metrika counter -->
 
         <script src="https://yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
-        <script src="https://yastatic.net/share2/share.js" async="async"></script>
+        <script src="https://yastatic.net/share2/share.js"></script>
     </body>
 </html>
