(ITGM#7) добавил интеграцию "поделиться" с GPLUS

--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#" itemscope itemtype="http://schema.org/Event> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#" itemscope itemtype="http://schema.org/Event> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#" itemscope itemtype="http://schema.org/Event> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#" itemscope itemtype="http://schema.org/Event> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <title>IT Global Meetup #7</title>
@@ -15,9 +15,16 @@
         <meta property="og:title" content="IT Global Meetup #7" />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png" />
+        <meta property="og:image:secure_url" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png" />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:description" content= "02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3."/>
         <meta property="og:url" content="http://piter-united.ru/itgm7/itgm.html">
+
+        <!-- Добавьте в тег HTML атрибуты itemscope и itemtype. -->
+        <!-- Добавьте указанные ниже теги в заголовок страницы. -->
+        <meta itemprop="name" content="IT Global Meetup #7">
+        <meta itemprop="description" content="02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3.">
+        <meta itemprop="image" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png">
 
         <meta name="author" content="IT Global Meetup">
 
