(ITGM#7) добавил недостающее время для Event itemtype="http://schema.org/Event"

--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -24,6 +24,7 @@
         <!-- Добавьте указанные ниже теги в заголовок страницы. -->
         <meta itemprop="name" content="IT Global Meetup #7">
         <meta itemprop="description" content="02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3.">
+        <meta itemprop="startDate" datetime="2016-04-02T11:00:00+03:00">
         <meta itemprop="image" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png">
 
         <meta name="author" content="IT Global Meetup">
