--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -25,6 +25,8 @@
         <meta itemprop="name" content="IT Global Meetup #7">
         <meta itemprop="description" content="02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3.">
         <meta itemprop="startDate" content="2016-04-02T11:00:00+03:00">
+        <meta itemprop="endDate" content="2016-04-02T18:00:00+03:00">
+        <meta itemprop="location" content="Санкт-Петербург, пр. Медиков 3, КДЦ Club House">
         <meta itemprop="image" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png">
 
         <meta name="author" content="IT Global Meetup">
