(ITGM#7) добавил недостающее location x3

--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -12,12 +12,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="IT Global Meetup. СПб, 02 апреля 2016 в Club House. Слет ИТ-сообществ Санкт-Петербурга.">
 
-        <meta property="og:title" content="IT Global Meetup #7" />
-        <meta property="og:type" content="website" />
-        <meta property="og:image" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png" />
-        <meta property="og:image:secure_url" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png" />
-        <meta property="og:image:type" content="image/png" />
-        <meta property="og:description" content= "02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3."/>
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="IT Global Meetup #7">
+        <meta property="og:title" content="IT Global Meetup #7">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png" itemprop="image">
+        <meta property="og:image:secure_url" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png">
+        <meta property="og:image:type" content="image/png">
+        <meta property="og:description" content= "02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3.">
         <meta property="og:url" content="http://piter-united.ru/itgm7/itgm.html">
 
         <!-- Добавьте в тег HTML атрибуты itemscope и itemtype. -->
@@ -26,8 +28,9 @@
         <meta itemprop="description" content="02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3.">
         <meta itemprop="startDate" content="2016-04-02T11:00:00+03:00">
         <meta itemprop="endDate" content="2016-04-02T18:00:00+03:00">
-        <meta itemprop="location" content="Санкт-Петербург, пр. Медиков 3, КДЦ Club House">
+        <meta itemprop="location" name="КДЦ Club House" adress="Санкт-Петербург, пр. Медиков 3">
         <meta itemprop="image" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png">
+        <meta itemprop="logo" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png">
 
         <meta name="author" content="IT Global Meetup">
 
