(ITGM#7) попытка сбросить кэш картинок

--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -6,7 +6,11 @@
     <head>
         <meta charset="utf-8">
         <title>IT Global Meetup #7</title>
-        
+
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+        <meta http-equiv="Pragma" content="no-cache"/>
+        <meta http-equiv="Expires" content="0"/>
+
         <!-- viewport settings -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,7 +32,6 @@
         <meta itemprop="description" content="02 апреля 2016, с 11.00 до 18.00. 7-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3.">
         <meta itemprop="startDate" content="2016-04-02T11:00:00+03:00">
         <meta itemprop="endDate" content="2016-04-02T18:00:00+03:00">
-        <meta itemprop="location.name" name="КДЦ Club House" adress="Санкт-Петербург, пр. Медиков 3">
         <meta itemprop="image" content="http://piter-united.ru/itgm7/img/site_logo/itgm_logo2.png">
 
         <meta name="author" content="IT Global Meetup">
