--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -7,9 +7,10 @@
         <meta charset="utf-8">
         <title>IT Global Meetup #7</title>
 
-        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+<!--    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
         <meta http-equiv="Pragma" content="no-cache"/>
         <meta http-equiv="Expires" content="0"/>
+        -->
 
         <!-- viewport settings -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
