--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,11 @@
     <meta name="description" content="Некоммерческое объединение ИТ-сообществ Санкт-Петербурга. Мы формируем и развиваем профессионально-образовательную инфраструктуру на базе сообществ в Санкт-Петербурге. Присоединяйтесь!" />
 
 
-    <meta property="og:title" content="Piter United" /> 
-    <meta property="og:type" content="website" /> 
+    <meta property="og:title" content="Piter United" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="http://piter-united.ru/img/pu_logo.png" />
-    <meta property="og:image:type" content="image/png" /> 
-    <meta property="og:description" content="Некоммерческое объединение ИТ-сообществ Санкт-Петербурга. Мы формируем и развиваем профессионально-образовательную инфраструктуру на базе сообществ в Санкт-Петербурге. Присоединяйтесь!" /> 
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:description" content="Некоммерческое объединение ИТ-сообществ Санкт-Петербурга. Мы формируем и развиваем профессионально-образовательную инфраструктуру на базе сообществ в Санкт-Петербурге. Присоединяйтесь!" />
     <meta property="og:url" content="http://piter-united.ru">
 
     <meta name="twitter:title" content="Piter United" />
@@ -44,20 +44,19 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             </button>
             <a class="navbar-brand" href="/">Piter United</a>
-            <a class="navbar-brand" href="/itgm/itgm.html">| IT Global Meetup</a>
+            <a class="navbar-brand" href="/itgm7/itgm.html">| IT Global Meetup</a>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <!--
-              <li><a href="/">IT Global Meetups</a></li>
-            -->
+                <script async defer src="https://piter-united.herokuapp.com/slackin.js"></script>
+              <!-- <li><a href="/">IT Global Meetups</a></li> -->
             </ul>
           </div>
         </div>
         </nav>
 
       {{ content }}
-    
+
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
