--- a/itgm9/css/main.css
+++ b/itgm9/css/main.css
@@ -20,9 +20,9 @@
  */
 
  /* Colors */
- /* Primary: #621F65 */
- /* Secondary: #873299 */
- /* Additional: #A35DB4 */
+ /* Primary: #001E4F */
+ /* Secondary: #050D9E */
+ /* Additional: #2E7DE1 */
 
 
 /* CORE CSS */
@@ -46,7 +46,7 @@ h2 {
 
 h3 {
 	font-size:28px;
-	color:#262626;
+	color: #262626;
 	line-height:28px;
 }
 
@@ -127,7 +127,8 @@ a {
 	width:100%;
 	/*background:#262626;*/
 	/*background: #621F65;*/
-	background: rgba(67, 159, 86, 0.7);
+	/*background: rgba(67, 159, 86, 0.7);*/
+	background: rgba(22, 28, 73, 0.7);
 	-webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
   	-moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
 	transition: background .5s ease-in-out,padding .5s ease-in-out;
@@ -207,7 +208,8 @@ a {
 #info i {
 	/*color:#fac42b;*/
 	/*color: #A35DB4;*/
-	color: #6CC049;
+	/*color: #6CC049;*/
+	color: #2E7DE1;
 	margin-bottom:10px;
 }
 
@@ -270,7 +272,7 @@ a {
   	height: 2px;
 	margin:0 auto;
  	/*background-color: #A35DB4;*/
-	background: #6CC049;
+	background: #2E7DE1;
  	margin-top: 10px;
   	margin-bottom: 5px;
 }
@@ -377,8 +379,8 @@ a {
 
 #program {
 	/*background:#A35DB4;*/
-	/*background: #6CC049;*/
-	background-image: url(../img/background.jpg);
+	background: #001E4F;
+	/*background-image: url(../img/background.jpg);*/
 	padding:80px 0 90px 0;
 	color: #fff!important;
 }
@@ -537,7 +539,7 @@ a {
   	width: 120px;
   	height: 3px;
  	/*background-color: #A35DB4;*/
-	background: #6CC049;
+	background: #2E7DE1;
  	margin-top: 12px;
   	margin-bottom: 15px;
 }
@@ -551,7 +553,7 @@ a {
 	font-size: 150px;
 	text-align: center;
 	/*color: #A35DB4;*/
-	color: #6CC049;
+	color: #2E7DE1;
 }
 
 /* VENUE */
@@ -731,7 +733,8 @@ a {
 	left: 0;
 	right: 0;
 	/*opacity: 0.8;*/
-	background-image: url(../img/background.jpg);
+	/*background-image: url(../img/background.jpg);*/
+	background: #001E4F;
 }
 
 #register h3{
@@ -878,7 +881,8 @@ a {
 #testimonial {
 	background:#fac42b;
 	/*background-image: url(../img/bg-testimonial.png);*/
-	background-image: url(../img/background.jpg);
+	/*background-image: url(../img/background.jpg);*/
+	background: #001E4F;
 	background-repeat: no-repeat;
 	background-attachment:fixed;
 	background-position: center;
@@ -1172,7 +1176,7 @@ textarea {
 
 #preload {
 	/*background: #873299;*/
-	background: #6CC049;
+	background: #2E7DE1;
 	position: fixed;
 	top:0;
 	left:0;
@@ -1235,7 +1239,8 @@ textarea {
 
 .slider::before {
 	/*opacity: 0.8;*/
-	background: url(../img/background.jpg);
+	/*background: url(../img/background.jpg);*/
+	background: #001E4F;
 }
 
 .slider::after {
@@ -1315,7 +1320,7 @@ textarea {
 }
 
 .wrap .overlay:after {
-	background: none repeat scroll 0 0 rgba(0, 149, 58, 0.7);
+	background: none repeat scroll 0 0 rgba(52, 100, 175, 0.7);
 	height: 100%;
 	content:"";
 	display: block;
@@ -1337,7 +1342,7 @@ textarea {
 }
 
 .wrap .overlay:before {
-	background: none repeat scroll 0 0 rgba(0, 149, 58, 0.7);
+	background: none repeat scroll 0 0 rgba(52, 100, 175, 0.7);
 	bottom: -100%;
 	height: 100%;
 	content:"";
