itgm10 fix dates

--- a/_layouts/itgm9.html
+++ b/_layouts/itgm9.html
@@ -20,7 +20,7 @@
         <meta property="og:image:secure_url" content="{{ page.logo }}">
         <meta property="og:image:type" content="image/png">
         <meta property="og:description" content= "{{ page.description }}">
-        <meta property="og:url" content="http://piter-united.ru/itgm9/itgm.html">
+        <meta property="og:url" content="{{ page.url }}">
 
         <!-- Добавьте в тег HTML атрибуты itemscope и itemtype. -->
         <!-- Добавьте указанные ниже теги в заголовок страницы. -->
@@ -66,7 +66,7 @@
         <script src="js/jquery.themepunch.revolution.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery.sticky.js"></script>
-        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="js/jquery.magnific-popup.js"></script>
         <script src="js/salvattore.js"></script>
         <script src="js/jquery.countdown.js"></script>
         <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
